--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "expo": "~54.0.12",
     "expo-blur": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "nanoid": "^5.1.6",
+    "nanoid": "^3.3.11",
     "react": "19.1.0",
+    "react-dom": "19.1.0",
     "react-native": "0.81.4",
     "react-native-get-random-values": "^1.11.0",
     "react-native-safe-area-context": "^5.6.1",
@@ -25,5 +26,8 @@
     "styled-components": "^6.1.19",
     "zustand": "^5.0.8"
   },
-  "private": true
+  "private": true,
+  "devDependencies": {
+    "babel-preset-expo": "^54.0.3"
+  }
 }
