--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
     "@react-native-async-storage/async-storage": "^1.21.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "^49.0.0",
-    "expo-blur": "^12.5.0",
-    "expo-status-bar": "^1.6.0",
+    "expo": "~49.0.21",
+    "expo-blur": "~12.5.0",
+    "expo-status-bar": "~1.6.0",
     "react": "18.2.0",
-    "react-native": "0.72.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.72.6",
     "react-native-gesture-handler": "^2.12.1",
     "react-native-safe-area-context": "^4.6.3",
     "react-native-screens": "^3.25.0",
+    "react-native-web": "~0.19.6",
     "styled-components": "^5.3.11",
     "zustand": "^4.4.1"
   },
