--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
     "test": "echo \"No automated tests configured yet\""
   },
   "dependencies": {
-    "@expo/vector-icons": "^13.0.0",
-    "@react-native-async-storage/async-storage": "^1.21.0",
+    "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
-    "expo": "~49.0.21",
-    "expo-blur": "~12.5.0",
-    "expo-status-bar": "~1.6.0",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.72.6",
-    "react-native-gesture-handler": "^2.12.1",
-    "react-native-safe-area-context": "^4.6.3",
-    "react-native-screens": "^3.25.0",
-    "react-native-web": "~0.19.6",
+    "expo": "~54.0.12",
+    "expo-blur": "~15.0.7",
+    "expo-status-bar": "~3.0.8",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
+    "react-native-gesture-handler": "~2.28.0",
+    "react-native-safe-area-context": "~5.6.0",
+    "react-native-screens": "~4.16.0",
+    "react-native-web": "^0.21.0",
     "styled-components": "^5.3.11",
     "zustand": "^4.4.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0",
-    "babel-preset-expo": "^9.5.0"
+    "@babel/core": "^7.25.2",
+    "babel-preset-expo": "~54.0.3"
   },
   "private": true
 }
