--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "2.2.0",
-    "@react-navigation/native": "^6.1.9",
-    "@react-navigation/stack": "^6.3.20",
+    "@react-navigation/native": "^7.1.17",
+    "@react-navigation/stack": "^7.4.8",
     "expo": "~54.0.12",
     "expo-blur": "~15.0.7",
     "expo-status-bar": "~3.0.8",
@@ -21,15 +21,25 @@
     "react-dom": "18.2.0",
     "react-native": "0.76.6",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-safe-area-context": "~5.6.0",
+    "react-native-safe-area-context": "~5.6.1",
     "react-native-screens": "~4.16.0",
     "react-native-web": "~0.19.12",
-    "styled-components": "^5.3.11",
-    "zustand": "^4.4.1"
+    "styled-components": "^6.1.19",
+    "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.25.2",
+    "@babel/core": "^7.28.4",
     "babel-preset-expo": "~54.0.3"
+  },
+  "engines": {
+    "node": ">=18.18 <=22",
+    "npm": ">=9"
+  },
+  "overrides": {
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.76.6",
+    "react-native-web": "0.19.12"
   },
   "private": true
 }
