--- a/package.json
+++ b/package.json
@@ -35,5 +35,9 @@
     "node": ">=18.18 <=22",
     "npm": ">=9"
   },
-  "private": true
+  "private": true,
+  "overrides": {
+    "glob": "^10.4.5",
+    "rimraf": "^4.0.2"
+  }
 }
