--- a/package.json
+++ b/package.json
@@ -17,19 +17,19 @@
     "expo": "~54.0.12",
     "expo-blur": "~15.0.7",
     "expo-status-bar": "~3.0.8",
-    "react": "18.2.0",
-    "react-dom": "18.2.0",
-    "react-native": "0.76.6",
+    "react": "19.1.0",
+    "react-dom": "19.1.0",
+    "react-native": "0.81.4",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-safe-area-context": "~5.6.1",
+    "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
-    "react-native-web": "~0.19.12",
+    "react-native-web": "^0.21.0",
     "styled-components": "^6.1.19",
     "zustand": "^5.0.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.28.4",
-    "babel-preset-expo": "~54.0.3"
+    "@babel/core": "^7.26.0",
+    "babel-preset-expo": "~54.0.0"
   },
   "engines": {
     "node": ">=18.18 <=22",
